add specs for business logic

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A project to model a battle game",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jasmine"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   "devDependencies": {
     "cypress": "^7.1.0",
     "ejs": "^3.1.6",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "jasmine": "^3.7.0"
   }
 }
